<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="crash_message">Oops… I crashed but you can send report to my developer to help him fix this issue !</string>
    <string name="app_name">Code!</string>
    <string name="activity_login_title">Login</string>
    <string name="activity_registration_title">Registration</string>
    <string name="activity_tutorial_title">Tutorial</string>
    <string name="activity_settings_title">Settings</string>

    <!-- Drower -->
    <string name="drawer_open">Contacts</string>
    <string name="drawer_close">Code!</string>

    <!-- Contact item -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="reject_user">Reject user</string>
    <string name="block_user">Block User</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="decline">Decline</string>

    <!-- Test to be deleted -->
    <string name="action_item_1">Item 1</string>
    <string name="action_item_2">Item 2</string>
    <string name="action_item_3">Item 3</string>

    <!-- Action bar items -->
    <string name="action_settings">Settings</string>
    <string name="action_share_qr">Share QR Code</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>

    <!-- Service errors -->
    <string name="rest_parse_status">REST_PARSE_STATUS</string>
    <string name="rest_parse_result">REST_PARSE_RESULT</string>
    <string name="rest_not_documented_error">Not documented error</string>
    <string name="rest_invalid_token">Invalid token</string>
    <string name="rest_unknown_error">Unknown error</string>
    <string name="rest_account_create">Can\'t create account</string>
    <string name="rest_incorrect_credentials">Wrong QR code or password</string>
    <string name="rest_chat_set_info_field_validation">REST_CHAT_SET_INFO_FIELD_VALIDATION</string>
    <string name="rest_chat_set_info_chat_not_found">REST_CHAT_SET_INFO_CHAT_NOT_FOUND</string>
    <string name="rest_chat_add_member_field_validation">REST_CHAT_ADD_MEMBER_FIELD_VALIDATION</string>
    <string name="rest_chat_add_member_already_member">REST_CHAT_ADD_MEMBER_ALREADY_MEMBER</string>
    <string name="rest_chat_add_member_permissions_denied">REST_CHAT_ADD_MEMBER_PERMISSIONS_DENIED</string>
    <string name="rest_chat_add_member_chat_not_found">REST_CHAT_ADD_MEMBER_CHAT_NOT_FOUND</string>
    <string name="rest_chat_message_not_a_member">REST_CHAT_MESSAGE_NOT_A_MEMBER</string>
    <string name="rest_chat_message_chat_not_found">REST_CHAT_MESSAGE_CHAT_NOT_FOUND</string>
    <string name="rest_chat_load_chat_not_a_member">REST_CHAT_LOAD_CHAT_NOT_A_MEMBER</string>
    <string name="rest_chat_load_chat_not_found">REST_CHAT_LOAD_CHAT_NOT_FOUND</string>
    <string name="rest_contact_set_info_user_not_found">REST_CONTACT_SET_INFO_USER_NOT_FOUND</string>
    <string name="rest_contact_set_info_no_permission">REST_CONTACT_SET_INFO_NO_PERMISSION</string>
    <string name="rest_contact_remove_contact_not_found">REST_CONTACT_REMOVE_CONTACT_NOT_FOUND</string>
    <string name="rest_chat_drop_member_permissions_denied">REST_CHAT_DROP_MEMBER_PERMISSIONS_DENIED</string>
    <string name="rest_chat_drop_member_not_a_member">REST_CHAT_DROP_MEMBER_NOT_A_MEMBER</string>
    <string name="rest_chat_drop_member_chat_not_found">REST_CHAT_DROP_MEMBER_CHAT_NOT_FOUND</string>
    <string name="action_search">Search</string>
    <string name="message">Type message</string>

    <!-- Preferences -->

    <string name="pref_category_name">Public name</string>
    <string name="pref_edit_name_title">Public name</string>
    <string name="pref_edit_name_summary"></string>
    <string name="pref_checkbox_name_title">Send public name</string>
    <string name="pref_checkbox_name_summary"></string>
    <string name="pref_category_message">Invitation message</string>
    <string name="pref_edit_message_title">Invitation message</string>
    <string name="pref_edit_message_summary"></string>
    <string name="pref_checkbox_message_title">Send invitation message</string>
    <string name="pref_checkbox_message_summary"></string>
    <string name="pref_category_additional">Additional</string>
    <string name="pref_checkbox_save_auto_accept_title">Auto accept</string>
    <string name="pref_checkbox_save_auto_accept_summary">Automatically accept contacts</string>
    <string name="pref_edit_save_location_date_title">Show time, location</string>
    <string name="pref_edit_save_location_date_summary">Show time, location of contacts in conversation cards</string>

    <!-- Alerts -->
    <string name="alert_empty_password">Empty passwod</string>
    <string name="alert_empty_qr_code">Empty QR Code</string>
    <string name="alert_no_internet">Check Internet connection</string>
    <string name="alert_password_not_match">Password fields are not match.</string>
    <string name="alert_no_access_to_external_storage">Check that SD card installed and it has free space!</string>
    <string name="created">Created:</string>

    <!-- Sign In item -->
    <string name="not_you">Not You?</string>
    <string name="clear_qr_code">Clear QR Code</string>
    <string name="enter_password_and_scan_qr_code">Enter your password and scan your QR Code to log in.</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="status_hint">Add Status Message Here</string>
    <string name="add_descrioption_hint">Add Description</string>
    <string name="add_title_hint">Add Title</string>
    <string name="add_tag_hint">Add HashTags</string>
    <string name="more">More</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="password_must_match">*Passwords must match</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter_password">Enter password</string>
    <string name="welcome">Welcome to Thred.</string>
    <string name="welcome_desc">To get started,you\'ll need to create a password to receive your unique code.</string>
    <string name="album_name">CameraSample</string>
    <string name="login_text">Enter your password and scan your QR Code to log in.</string>
    <string name="add_contact">Add Contact</string>
    <string name="block">Block</string>
    <string name="flag_comment">Flag Comment</string>
    <string name="status_update">Status update </string>
    <string name="member">Members: </string>
    <string name="loading_text">Loading...</string>
    <string name="this_is_public_thread">This is a public thread.</string>
    <string name="delete_message">Delete Message</string>
    <string name="un_flag_message">Unflag Message</string>
    <string name="this_conversation_is_closed">This conversation is closed.</string>
    <string name="remove">remove</string>
    <string name="add_location">Add location</string>
    <string name="add_status_hint">Add Status Message</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="add_screen_name">Add Screen Name</string>
    <string name="user_name_display_hint">Your screen name shows in Private Chats and when adding a contact. </string>
    <string name="location_not_set">No Location</string>
    <string name="no_status_hint">No Status Message</string>
    <string name="no_title">No Title</string>
    <string name="no_description">No Description</string>
    <string name="no_hashtags">No HashTags</string>
    <string name="disconnect_from_user">Disconnect from User</string>
    <string name="more_share">More Sharing Options</string>
    <string name="email_screen_text">You\'re all set. The above code is your unique identity on Code. Make sure to keep it someplace safe and handy for future use.</string>
    <string name="email_screen_text_title">Your unique QR Code.</string>
    <string name="recommended_text">We recommended emailing yourself your code.</string>
    <string name="no_thanks_continue">No thanks, continue</string>
    <string name="email_qr_code">Email QR Code</string>
    <string name="invite">Invite</string>
    
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="disable_comments">Disable comments</string>
    <string name="disable_comments_dis">Turn this off if you do not want user to reply to your thread. </string>
    
    <string name="searchable_thread">Searchable thread</string>
    <string name="searchable_thread_dis">Turn this off if you do not want user to be able to find your thread through the search. It will only be accessible through the QR code </string>
    
    <string name="delete_thread">Delete thread</string>
    <string name="delete_thread_dis">This will permanently delete the thread. </string>
    
    <string name="flagged_comments">Flagged comments</string>
    <string name="flagged_comments_dis">View flagged comments </string>
    <string name="contacts">Contacts</string>
    <string name="new_contact_request">New Contact Request</string>
    <string name="contact_info">TextLocation</string>
    <string name="notes">Notes</string>

</resources>