<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <biz.softtechnics.qodeme.ui.common.TextViewMedium
        android:id="@+id/textView_addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/add_contact" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:id="@+id/view_divider1"
        android:background="@drawable/line_horizontal" />

    <biz.softtechnics.qodeme.ui.common.TextViewMedium
        android:id="@+id/textView_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/block" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:id="@+id/view_divider2"
        android:background="@drawable/line_horizontal" />

    <biz.softtechnics.qodeme.ui.common.TextViewMedium
        android:id="@+id/textView_flagged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/flag_comment" />

</LinearLayout>