<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <com.blulabellabs.code.ui.common.TextViewMedium
        android:id="@+id/textView_deleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/delete_message"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_divider1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/line_horizontal" />

    <com.blulabellabs.code.ui.common.TextViewMedium
        android:id="@+id/textView_unflagged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/un_flag_message"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_divider2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/line_horizontal" />

    <com.blulabellabs.code.ui.common.TextViewMedium
        android:id="@+id/textView_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/block_user"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>