<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_more"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_more"
            android:drawablePadding="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/activity_settings_title"
            android:textColor="@color/signup_text_selector"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_invite"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_blue"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="right|center_vertical"
            android:gravity="left|center_vertical"
            android:text="@string/invite"
            android:textColor="@color/signup_text_selector"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_more_share"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="@null"
        android:drawableLeft="@drawable/ic_share_h"
        android:drawablePadding="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/more_share"
        android:textColor="@color/signup_text_selector"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divider_color" />

</LinearLayout>